--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -4,15 +4,20 @@
 }
 
 <h1>Movies</h1>
-<a asp-controller="Movie" asp-action="Create">Add New Movie</a>
+
+<p><a asp-controller="Movie" asp-action="Create">Add New Movie</a></p>
+
 <table>
     <tr>
         <th>Movie Name</th>
+        <th>Rating</th>
     </tr>
-    @foreach (var movie in ViewBag.Movies)
+    @foreach (var movie in ViewBag.movies)
     {
         <tr>
-            <td>@movie.Value</td>
+            <td id="@movie.Key">@movie.Value</td>
         </tr>
     }
+
 </table>
+
