--- a/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
@@ -5,8 +5,9 @@
 
 <h1>Add Movie</h1>
 
-<form method="post">
-    <input name="movie" />
+<form method="POST">
+    <label for="movie">Movie Name: </label>
+    <input name="movie" type="text" />
     <button type="submit">Add Movie</button>
 </form>
 
