--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -1,14 +1,15 @@
 ﻿
 @{
-    ViewData["Title"] = "Rate Movie";
+    ViewData["Title"] = "Add Movie Rating";
 }
 
-<h1>Rate a Movie</h1>
-<form method='post'>
+<h1>Add Movie Rating</h1>
+
+<form method="post">
     <select name="movieName">
         @foreach (var movie in ViewBag.Movies)
         {
-            <option>@movie.Value</option>
+            <option>@movie</option>
         }
     </select>
     <select name="rating">
@@ -18,7 +19,8 @@
         <option>4</option>
         <option>5</option>
     </select>
-    <button type='submit'>Rate it</button>
+    <button type="submit">Rate it!</button>
+
 </form>
 
 
